==> MaUwJo/MaJoSoftRF/software/firmware/source/SoftRF/Platform_CC13XX.cpp <==
#include <Wire.h>
#include <ti/drivers/Power.h>
#include <ti/drivers/Watchdog.h>
#include <xdc/runtime/Memory.h>
#include <ti/devices/cc13x0/driverlib/sys_ctrl.h>
#include <ti/devices/cc13x0/driverlib/aon_batmon.h>
#include <SCSerial.h>
#include <ti/devices/cc13x2_cc26x2/driverlib/sys_ctrl.h>
#include <ti/devices/cc13x2_cc26x2/driverlib/aon_batmon.h>
#include <SPIFlash.h>
#include <ADXL362.h>
#include "SoCHelper.h"
#include "RFHelper.h"
#include "LEDHelper.h"
#include "SoundHelper.h"
#include "BaroHelper.h"
#include "EasyLink.h"
#include <U8x8lib.h>

static void CC13XX_setup()
{
  uint32_t reset_source = SysCtrlResetSourceGet();

  switch (reset_source)
  {
    case RSTSRC_PIN_RESET:
      reset_info.reason = REASON_EXT_SYS_RST; break;
    case RSTSRC_VDDS_LOSS:
      reset_info.reason = REASON_WDT_RST; break;
    case RSTSRC_VDDR_LOSS:
      reset_info.reason = REASON_WDT_RST; break;
    case RSTSRC_CLK_LOSS:
      reset_info.reason = REASON_WDT_RST; break;
    case RSTSRC_SYSRESET:
      reset_info.reason = REASON_SOFT_RESTART; break;
    case RSTSRC_WARMRESET:
      reset_info.reason = REASON_SOFT_RESTART; break;
    case RSTSRC_WAKEUP_FROM_SHUTDOWN:
      reset_info.reason = REASON_DEEP_SLEEP_AWAKE; break;
#if defined(ENERGIA_ARCH_CC13X2)
    case RSTSRC_WAKEUP_FROM_TCK_NOISE:
      reset_info.reason = REASON_DEEP_SLEEP_AWAKE; break;
#endif /* ENERGIA_ARCH_CC13X2 */
    case RSTSRC_PWR_ON:
    default:
      reset_info.reason = REASON_DEFAULT_RST; break;
  }

  EasyLink_getIeeeAddr(ieeeAddr);

#if defined(ENERGIA_ARCH_CC13X2)

  bool has_spiflash = false;
  uint16_t flash_id = 0;
  int16_t XValue = 0, YValue = 0, ZValue = 0, Temperature = 0;

  has_spiflash = flash.initialize();

  if (has_spiflash) {
    flash_id = flash.readDeviceId();
    flash.sleep();
  }
  flash.end();

  adxl.begin(SOC_GPIO_PIN_ADXL_SS);
  adxl.beginMeasure();

  adxl.readXYZTData(XValue, YValue, ZValue, Temperature);
  /* no .end() method for adxl */
  SPI.end(SOC_GPIO_PIN_ADXL_SS);

  if (has_spiflash && flash_id == MACRONIX_MX25R8035F) {

    hw_info.model = SOFTRF_MODEL_UNI;

    if (XValue == 0 && YValue == 0 && ZValue == 0 && Temperature == 0) {
      cc13xx_board = TI_CC1352R1_LAUNCHXL;
    } else {
      cc13xx_board = TI_LPSTK_CC1352R;
    }
  } else {
    cc13xx_board  = SOFTRF_UAT_MODULE_20;
  }

  if (SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN) {
    pinMode(RED_LED, OUTPUT);
    /* Indicate GNSS PPS signal */
    digitalWrite(RED_LED, LOW);
  }
#endif /* ENERGIA_ARCH_CC13X2 */

  hw_info.revision = cc13xx_board;
}

static void CC13XX_loop()
{
#if defined(ENERGIA_ARCH_CC13X2)

  if (cc13xx_watchdogHandle) {
    // Reload the watchdog
    Watchdog_clear(cc13xx_watchdogHandle);
  }

  if ((SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN) &&
      (millis() - PPS_TimeMarker) < 100) {
    digitalWrite(RED_LED, HIGH);
  } else {
    digitalWrite(RED_LED, LOW);
  }
#endif /* ENERGIA_ARCH_CC13X2 */
}

static void CC13XX_fini()
{
  // Disable battery monitoring
  AONBatMonDisable();

#if defined(ENERGIA_ARCH_CC13X2)

  if (SOC_GPIO_PIN_STATUS != SOC_UNUSED_PIN) {
    digitalWrite(SOC_GPIO_PIN_STATUS, LOW);
  }

  if ((SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN)) {
    digitalWrite(RED_LED, LOW);
  }

#endif /* ENERGIA_ARCH_CC13X2 */

  Power_shutdown(0, 0);
}

static void CC13XX_reset()
{
  SysCtrlSystemReset();
}

static uint32_t CC13XX_getChipId()
{
  uint32_t id = (uint32_t) ieeeAddr[7]        | ((uint32_t) ieeeAddr[6] << 8) | \
               ((uint32_t) ieeeAddr[5] << 16) | ((uint32_t) ieeeAddr[4] << 24);

  /* remap address to avoid overlapping with congested FLARM range */
  if (((id & 0x00FFFFFF) >= 0xDD0000) && ((id & 0x00FFFFFF) <= 0xDFFFFF)) {
    id += 0x100000;
  }

  return id;
}

static uint32_t CC13XX_getFreeHeap()
{
  Memory_Stats memStat;

  Memory_getStats(NULL, &memStat);

  return memStat.totalFreeSize;
}

static bool CC13XX_EEPROM_begin(size_t size)
{
#if !defined(EXCLUDE_EEPROM)
  EEPROM.begin(size);
#endif
  return true;
}

static float CC13XX_Battery_voltage()
{
  if (AONBatMonNewBatteryMeasureReady()) {
    // Get the VDDS voltage
    cc13xx_vdd = AONBatMonBatteryVoltageGet();
  }

  return ((cc13xx_vdd >> 8) & 0x7) + (float) (cc13xx_vdd & 0xFF) / 256.0;
}

static void CC13XX_WDT_fini()
{
#if defined(ENERGIA_ARCH_CC13X2)
  if (cc13xx_watchdogHandle) {
    Watchdog_close(cc13xx_watchdogHandle);
  }
#endif /* ENERGIA_ARCH_CC13X2 */
}
